--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.2.9",
   "private": true,
   "engines": {
-    "node": ">=16.0.0"
+    "node": "16.13.0",
+    "npm" : "8.1.0"
   },
   "bin": "./app.js",
   "scripts": {
